# ComfyUI-Lumina-mGPT-Wrapper

./: .gitattributes  .gitignore  Notice (Chameleon).txt  README.md  __init__.py  install.py  modeling_xllmx_chameleon.py  modified_requirements.txt  nodes.py  pyproject.toml  requirements.txt  utils.py
Lumina-mGPT/: Run.txt
Lumina-mGPT/lumina_mgpt/: inference_solver.py
Lumina-mGPT/lumina_mgpt/ckpts/chameleon/tokenizer/: checklist.chk  vqgan.yaml
Lumina-mGPT/lumina_mgpt/data/: item_processor.py
